--- a/honest_validator/Cargo.toml
+++ b/honest_validator/Cargo.toml
@@ -17,3 +17,5 @@ eth2_hashing = { path = "../utils/eth2_hashing"}
 eth2_ssz = { path = "../utils/ssz"}
 eth2_ssz_types = { path = "../utils/ssz_types"}
 tree_hash = { path = "../utils/tree_hash"}
+hyper = "0.12"
+futures = "0.3.1"
