--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -15,3 +15,4 @@ eth2_ssz_derive = '0.1'
 eth2_ssz_types = { path = '../utils/ssz_types' }
 tree_hash = '0.1'
 tree_hash_derive = '0.2'
+serde_bytes = "0.11.2"
