signatures fixed + some refactoring

--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -16,3 +16,5 @@ eth2_ssz_types = { path = '../utils/ssz_types' }
 tree_hash = '0.1'
 tree_hash_derive = '0.2'
 serde_bytes = "0.11.2"
+hex = "0.4"
+
